--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
   <title>Lists Lab</title>
 </head>
 <body>
-
+<ul>
+  <li>Cats</li>
+  <li>Dogs</li>
+  <li>Fish
+  <ul>
+    <li>Salmon</li>
+  </ul>
+  </li>
+  <li>Birds</li>
+</ul>
   <!-- Write your HTML in this file -->
-
+<ol>
+  <li>One</li>
+  <li>Two</li>
+  <li>Three</li>
+</ol>
 </body>
 </html>
-
